force-app/main/default/objects/DSALES_TipodeUso__c/DSALES_TipodeUso__c.object-meta.xml
<CustomObject>
    <description>Objeto para tener el registro de los tipos de uso de vehículos</description>
    <label>Tipo de Uso</label>
    <nameField>
        <label>Nombre de Tipo de uso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de Usos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>