force-app/main/default/objects/DSALES_TipodeUso__c/fields/DSALES_Activo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capo para poder identificar si el tipo de uso esta activado.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>