force-app/main/default/objects/DSALES_TipodeUso__c/fields/DSALES_Numerodetipodeuso__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroTipoUso__c</fullName>
    <description>Campo para llevar el conteo de los tipos de uso.</description>
    <displayFormat>{000000}</displayFormat>
    <label>Número de tipo de uso</label>
    <type>AutoNumber</type>
</CustomField>